# fytlogger

./: CMakeLists.txt  README.md
cmake/: fytloggerConfig.cmake.in
include/fytlogger/: logger.hpp  types.hpp  writer.hpp
src/: logger.cpp  writer.cpp
test/: test.cpp
